--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "@types/react": "~18.2.14",
     "expo": "~49.0.11",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "typescript": "^5.1.3",
-    "expo-font": "~11.4.0"
+    "react-native-linear-gradient": "^2.8.3",
+    "react-navigation-shared-element": "^3.1.3",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
