--- a/package.json
+++ b/package.json
@@ -19,10 +19,19 @@
     "@types/react": "~18.2.14",
     "expo": "~49.0.11",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
+    "install": "^0.13.0",
+    "npm": "^10.2.4",
     "react": "18.2.0",
-    "react-native": "^0.72.5",
+    "react-native": "0.72.6",
+    "react-native-element-dropdown": "^2.10.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-flatlist": "^3.2.3",
     "react-native-tab-view": "^3.5.2",
     "react-navigation-shared-element": "^3.1.3",
     "typescript": "^5.1.3"
